Fixing reftest added by bug 456147
UltraBlame original commit: 4def37ea72e4ed9819499f68387c3b0f54e1bde9

--- a/layout/reftests/bugs/456147-ref.html
+++ b/layout/reftests/bugs/456147-ref.html
@@ -97,6 +97,14 @@ normal
 14pt
 serif
 ;
+display
+:
+block
+;
+height
+:
+30px
+;
 }
 div
 #
@@ -190,9 +198,6 @@ overline
 span
 >
 <
-br
->
-<
 span
 >
 Orange
@@ -203,9 +208,6 @@ underline
 span
 >
 <
-br
->
-<
 span
 >
 Blue
@@ -214,9 +216,6 @@ strikethrough
 <
 /
 span
->
-<
-br
 >
 <
 /
