Back out bug 114169 (changeset 8110e3bae4bf) and change the test (changeset 8f53fcb8bde5) to todos, to see if it was repsonsible for the regression in bug 458065.
UltraBlame original commit: 6f3797124c84db28a4845fd90767837b711f092f

--- a/layout/base/tests/test_bug114649.html
+++ b/layout/base/tests/test_bug114649.html
@@ -395,7 +395,7 @@ check_for_resize_events
 (
 )
 {
-ok
+todo
 (
 gGotEventsAt
 .
@@ -410,7 +410,7 @@ events
 "
 )
 ;
-isnot
+todo_isnot
 (
 gGotEventsAt
 [
