--- a/layout/base/tests/test_bug114649.html
+++ b/layout/base/tests/test_bug114649.html
@@ -395,7 +395,7 @@ check_for_resize_events
 (
 )
 {
-todo
+ok
 (
 gGotEventsAt
 .
@@ -410,7 +410,7 @@ events
 "
 )
 ;
-todo_isnot
+isnot
 (
 gGotEventsAt
 [
