Bug 456484.  Kids of an inline-block that has overflow:'something other than visible' should not necessarily shrink-wrap.  r+sr=roc
UltraBlame original commit: d28eb3aa049df458ea1c77fa6778624adcd36b1f

--- a/layout/style/ua.css
+++ b/layout/style/ua.css
@@ -1137,9 +1137,39 @@ padding
 :
 inherit
 ;
+/
+*
+The
+display
+doesn
+'
+t
+affect
+the
+kind
+of
+frame
+constructed
+here
+.
+This
+just
+affects
+auto
+-
+width
+sizing
+of
+the
+block
+we
+create
+.
+*
+/
 display
 :
-inherit
+block
 ;
 -
 moz
