Bug 438302 - Remove Pinstripe text-shadow hacks. r=rflint
UltraBlame original commit: ffd6a43042b9e1fab458630cd6e6ee4a546c1a8e

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -1322,47 +1322,10 @@ item
 toolbarbutton
 -
 text
--
-stack
->
-label
 {
 margin
 :
 0
-;
-}
-toolbarbutton
-.
-bookmark
--
-item
->
-.
-toolbarbutton
--
-text
--
-stack
->
-.
-toolbarbutton
--
-text
--
-shadow
-{
-padding
--
-top
-:
-2px
-;
-text
--
-align
-:
-center
 ;
 }
 toolbarbutton
@@ -1382,8 +1345,6 @@ container
 toolbarbutton
 -
 text
--
-stack
 {
 -
 moz
@@ -1412,8 +1373,6 @@ rtl
 toolbarbutton
 -
 text
--
-stack
 {
 -
 moz
@@ -1543,8 +1502,6 @@ hover
 toolbarbutton
 -
 text
--
-stack
 toolbarbutton
 .
 bookmark
@@ -1616,8 +1573,6 @@ hover
 toolbarbutton
 -
 text
--
-stack
 toolbarbutton
 .
 bookmark
@@ -1686,8 +1641,6 @@ hover
 toolbarbutton
 -
 text
--
-stack
 {
 background
 :
@@ -1759,8 +1712,6 @@ hover
 toolbarbutton
 -
 text
--
-stack
 {
 background
 :
@@ -1814,8 +1765,6 @@ active
 toolbarbutton
 -
 text
--
-stack
 toolbarbutton
 .
 bookmark
@@ -1897,8 +1846,6 @@ active
 toolbarbutton
 -
 text
--
-stack
 toolbarbutton
 .
 bookmark
@@ -1919,8 +1866,6 @@ true
 toolbarbutton
 -
 text
--
-stack
 #
 home
 -
@@ -2017,8 +1962,6 @@ rtl
 toolbarbutton
 -
 text
--
-stack
 {
 background
 :
@@ -2073,8 +2016,6 @@ active
 toolbarbutton
 -
 text
--
-stack
 toolbarbutton
 .
 bookmark
@@ -2098,8 +2039,6 @@ open
 toolbarbutton
 -
 text
--
-stack
 #
 home
 -
@@ -2154,88 +2093,6 @@ right
 center
 !
 important
-;
-}
-toolbarbutton
-.
-bookmark
--
-item
-:
-not
-(
-[
-container
-=
-"
-true
-"
-]
-)
-{
--
-moz
--
-binding
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-browser
-.
-xml
-#
-toolbarbutton
--
-shadow
-)
-;
-}
-toolbarbutton
-.
-bookmark
--
-item
-[
-container
-=
-"
-true
-"
-]
-{
--
-moz
--
-binding
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-browser
-.
-xml
-#
-toolbarbutton
--
-menu
--
-shadow
-)
 ;
 }
 toolbarbutton
@@ -3505,69 +3362,6 @@ dropmarker
 display
 :
 none
-;
-}
-/
-*
--
--
--
--
--
-DEFAULT
-PRIMARY
-TOOLBAR
-BUTTONS
--
--
--
--
--
-*
-/
-.
-toolbarbutton
--
-text
--
-shadow
-.
-tab
--
-text
--
-shadow
-{
-color
-:
-#
-f0f0f0
-;
-padding
--
-top
-:
-1px
-;
-opacity
-:
-0
-.
-5
-;
-}
-.
-tab
--
-text
--
-shadow
-{
-padding
--
-top
-:
-0
 ;
 }
 /
@@ -13772,21 +13566,7 @@ margin
 top
 :
 0
-!
-important
 ;
-}
-.
-tab
--
-text
-.
-tab
--
-text
--
-shadow
-{
 font
 :
 message
@@ -13798,8 +13578,29 @@ font
 weight
 :
 bold
-!
-important
+;
+text
+-
+shadow
+:
+0
+1px
+0
+rgba
+(
+255
+255
+255
+0
+.
+4
+)
+;
+padding
+-
+bottom
+:
+1px
 ;
 }
 .
@@ -13876,34 +13677,6 @@ tabbrowser
 -
 tab
 {
--
-moz
--
-binding
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-browser
-.
-xml
-#
-tabbrowser
--
-tab
-"
-)
-!
-important
-;
 -
 moz
 -
@@ -14028,13 +13801,6 @@ tab
 image
 -
 middle
->
-.
-tab
--
-text
--
-stack
 >
 .
 tab
