--- a/toolkit/themes/pinstripe/global/toolbarbutton.css
+++ b/toolkit/themes/pinstripe/global/toolbarbutton.css
@@ -654,6 +654,47 @@ color
 :
 transparent
 ;
+text
+-
+shadow
+:
+0
+1px
+0
+rgba
+(
+255
+255
+255
+0
+.
+4
+)
+;
+}
+toolbarbutton
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
+:
+active
+:
+hover
+{
+text
+-
+shadow
+:
+none
+;
 }
 .
 toolbarbutton
