Bug 455880 Move <filefield> to toolkit/content/widgets r=Enn
UltraBlame original commit: 4f1e7711b92f109b3fd1bc9e11e0c40282c89d0d

--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -7969,3 +7969,58 @@ findbar
 )
 ;
 }
+/
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
+filefield
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
+*
+/
+filefield
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+content
+/
+bindings
+/
+filefield
+.
+xml
+#
+filefield
+"
+)
+;
+}
