Bug 69710 Disabled menu items need more three-dimensional appearance r=dao
UltraBlame original commit: 6251e69516c9280e9e057c106f5cd6178aedecbd

--- a/toolkit/themes/gnomestripe/global/checkbox.css
+++ b/toolkit/themes/gnomestripe/global/checkbox.css
@@ -891,8 +891,6 @@ true
 color
 :
 GrayText
-!
-important
 ;
 }
 /
@@ -997,6 +995,17 @@ repeat
 ;
 }
 checkbox
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
 :
 hover
 {
