--- a/toolkit/themes/gnomestripe/global/radio.css
+++ b/toolkit/themes/gnomestripe/global/radio.css
@@ -899,8 +899,6 @@ true
 color
 :
 GrayText
-!
-important
 ;
 }
 /
@@ -1061,6 +1059,17 @@ none
 ;
 }
 radio
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
 :
 hover
 {
