--- a/toolkit/themes/winstripe/global/button.css
+++ b/toolkit/themes/winstripe/global/button.css
@@ -1054,9 +1054,6 @@ button
 -
 box
 :
-not
-(
-:
 -
 moz
 -
@@ -1066,10 +1063,7 @@ metric
 (
 windows
 -
-default
--
-theme
-)
+classic
 )
 button
 [
@@ -1085,9 +1079,6 @@ button
 -
 box
 :
-not
-(
-:
 -
 moz
 -
@@ -1097,10 +1088,7 @@ metric
 (
 windows
 -
-default
--
-theme
-)
+classic
 )
 button
 [
@@ -1116,9 +1104,6 @@ button
 -
 box
 :
-not
-(
-:
 -
 moz
 -
@@ -1128,10 +1113,7 @@ metric
 (
 windows
 -
-default
--
-theme
-)
+classic
 )
 {
 padding
@@ -1263,6 +1245,40 @@ important
 color
 :
 GrayText
+;
+}
+button
+[
+disabled
+=
+"
+true
+"
+]
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+classic
+)
+{
+color
+:
+ThreeDShadow
+;
+text
+-
+shadow
+:
+1px
+1px
+ThreeDHighlight
 ;
 }
 button
