--- a/toolkit/themes/winstripe/global/formatting.css
+++ b/toolkit/themes/winstripe/global/formatting.css
@@ -629,6 +629,40 @@ color
 GrayText
 ;
 }
+label
+[
+disabled
+=
+"
+true
+"
+]
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+classic
+)
+{
+color
+:
+ThreeDShadow
+;
+text
+-
+shadow
+:
+1px
+1px
+ThreeDHighlight
+;
+}
 description
 label
 {
