--- a/toolkit/themes/winstripe/global/groupbox.css
+++ b/toolkit/themes/winstripe/global/groupbox.css
@@ -607,9 +607,6 @@ padding
 }
 groupbox
 :
-not
-(
-:
 -
 moz
 -
@@ -619,10 +616,7 @@ metric
 (
 windows
 -
-default
--
-theme
-)
+classic
 )
 {
 border
