--- a/toolkit/themes/winstripe/global/menu.css
+++ b/toolkit/themes/winstripe/global/menu.css
@@ -711,6 +711,86 @@ color
 GrayText
 ;
 }
+menu
+[
+disabled
+=
+"
+true
+"
+]
+:
+not
+(
+[
+_moz
+-
+menuactive
+=
+"
+true
+"
+]
+)
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+classic
+)
+menuitem
+[
+disabled
+=
+"
+true
+"
+]
+:
+not
+(
+[
+_moz
+-
+menuactive
+=
+"
+true
+"
+]
+)
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+classic
+)
+{
+color
+:
+ThreeDShadow
+;
+text
+-
+shadow
+:
+1px
+1px
+ThreeDHighlight
+;
+}
 menuitem
 .
 spell
@@ -1561,6 +1641,55 @@ true
 color
 :
 GrayText
+;
+}
+menulist
+>
+menupopup
+>
+menuitem
+[
+disabled
+=
+"
+true
+"
+]
+:
+not
+(
+[
+_moz
+-
+menuactive
+=
+"
+true
+"
+]
+)
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+classic
+)
+{
+color
+:
+GrayText
+;
+text
+-
+shadow
+:
+none
 ;
 }
 menulist
