--- a/toolkit/themes/winstripe/global/radio.css
+++ b/toolkit/themes/winstripe/global/radio.css
@@ -807,8 +807,40 @@ true
 color
 :
 GrayText
-!
-important
+;
+}
+radio
+[
+disabled
+=
+"
+true
+"
+]
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+classic
+)
+{
+color
+:
+ThreeDShadow
+;
+text
+-
+shadow
+:
+1px
+1px
+ThreeDHighlight
 ;
 }
 /
