--- a/toolkit/themes/winstripe/global/toolbarbutton.css
+++ b/toolkit/themes/winstripe/global/toolbarbutton.css
@@ -869,6 +869,21 @@ open
 true
 "
 ]
+toolbarbutton
+[
+disabled
+=
+"
+true
+"
+]
+[
+checked
+=
+"
+true
+"
+]
 {
 border
 -
@@ -883,8 +898,140 @@ padding
 color
 :
 GrayText
-!
-important
+;
+}
+toolbarbutton
+[
+disabled
+=
+"
+true
+"
+]
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+classic
+)
+toolbarbutton
+[
+disabled
+=
+"
+true
+"
+]
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+classic
+)
+:
+hover
+toolbarbutton
+[
+disabled
+=
+"
+true
+"
+]
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+classic
+)
+:
+hover
+:
+active
+toolbarbutton
+[
+disabled
+=
+"
+true
+"
+]
+[
+open
+=
+"
+true
+"
+]
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+classic
+)
+toolbarbutton
+[
+disabled
+=
+"
+true
+"
+]
+[
+checked
+=
+"
+true
+"
+]
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+classic
+)
+{
+color
+:
+ThreeDShadow
+;
+text
+-
+shadow
+:
+1px
+1px
+ThreeDHighlight
 ;
 }
 /
