Bug 164608 - Menu bars in background windows should be grayed out (disabled appearance). r=neil
UltraBlame original commit: 607bc6cc1cd3e76b14855c66099e19fcfa523ac1

--- a/toolkit/themes/winstripe/global/global.css
+++ b/toolkit/themes/winstripe/global/global.css
@@ -1291,6 +1291,27 @@ se
 resize
 ;
 }
+window
+:
+not
+(
+[
+active
+=
+"
+true
+"
+]
+)
+menubar
+>
+menu
+{
+color
+:
+ThreeDShadow
+;
+}
 /
 *
 XXXBlake
