--- a/toolkit/components/passwordmgr/test/test_prompt.html
+++ b/toolkit/components/passwordmgr/test/test_prompt.html
@@ -113,27 +113,6 @@ js
 script
 >
 <
-script
-type
-=
-"
-text
-/
-javascript
-"
-src
-=
-"
-notification_common
-.
-js
-"
->
-<
-/
-script
->
-<
 link
 rel
 =
@@ -273,13 +252,11 @@ UniversalXPConnect
 ;
 var
 pwmgr
-tmplogin
 login1
 login2A
 login2B
 login3A
 login3B
-login4
 ;
 function
 initLogins
@@ -310,32 +287,6 @@ Ci
 nsILoginManager
 )
 ;
-tmpLogin
-=
-Cc
-[
-"
-mozilla
-.
-org
-/
-login
--
-manager
-/
-loginInfo
-;
-1
-"
-]
-.
-createInstance
-(
-Ci
-.
-nsILoginInfo
-)
-;
 login1
 =
 Cc
@@ -441,32 +392,6 @@ nsILoginInfo
 )
 ;
 login3B
-=
-Cc
-[
-"
-mozilla
-.
-org
-/
-login
--
-manager
-/
-loginInfo
-;
-1
-"
-]
-.
-createInstance
-(
-Ci
-.
-nsILoginInfo
-)
-;
-login4
 =
 Cc
 [
@@ -654,37 +579,6 @@ mochipass2
 "
 )
 ;
-login4
-.
-init
-(
-"
-http
-:
-/
-/
-localhost
-:
-8888
-"
-null
-"
-mochitest3
-"
-"
-mochiuser3
-"
-"
-mochipass3
--
-old
-"
-"
-"
-"
-"
-)
-;
 pwmgr
 .
 addLogin
@@ -718,13 +612,6 @@ pwmgr
 addLogin
 (
 login3B
-)
-;
-pwmgr
-.
-addLogin
-(
-login4
 )
 ;
 }
@@ -782,13 +669,6 @@ removeLogin
 login3B
 )
 ;
-pwmgr
-.
-removeLogin
-(
-login4
-)
-;
 SimpleTest
 .
 finish
@@ -796,65 +676,6 @@ finish
 )
 ;
 }
-/
-*
-*
-handleDialog
-*
-*
-Invoked
-a
-short
-period
-of
-time
-after
-calling
-startCallbackTimer
-(
-)
-and
-*
-allows
-testing
-the
-actual
-auth
-dialog
-while
-it
-'
-s
-being
-displayed
-.
-Tests
-*
-should
-call
-startCallbackTimer
-(
-)
-each
-time
-the
-auth
-dialog
-is
-expected
-(
-the
-*
-timer
-is
-a
-one
--
-shot
-)
-.
-*
-/
 function
 handleDialog
 (
@@ -2110,164 +1931,6 @@ password
 ;
 break
 ;
-/
-/
-(
-1002
-doesn
-'
-t
-trigger
-a
-dialog
-)
-case
-1003
-:
-is
-(
-username
-"
-mochiuser1
-"
-"
-Checking
-filled
-username
-"
-)
-;
-is
-(
-password
-"
-mochipass1
-"
-"
-Checking
-filled
-password
-"
-)
-;
-passfield
-.
-setAttribute
-(
-"
-value
-"
-"
-mochipass1
--
-new
-"
-)
-;
-break
-;
-case
-1004
-:
-is
-(
-username
-"
-mochiuser3
-"
-"
-Checking
-filled
-username
-"
-)
-;
-is
-(
-password
-"
-mochipass3
--
-old
-"
-"
-Checking
-filled
-password
-"
-)
-;
-passfield
-.
-setAttribute
-(
-"
-value
-"
-"
-mochipass3
--
-new
-"
-)
-;
-break
-;
-case
-1005
-:
-is
-(
-username
-"
-"
-"
-Checking
-filled
-username
-"
-)
-;
-is
-(
-password
-"
-"
-"
-Checking
-filled
-password
-"
-)
-;
-userfield
-.
-setAttribute
-(
-"
-value
-"
-"
-mochiuser3
-"
-)
-;
-passfield
-.
-setAttribute
-(
-"
-value
-"
-"
-mochipass3
--
-old
-"
-)
-;
-break
-;
 default
 :
 ok
@@ -2319,28 +1982,6 @@ didDialog
 true
 ;
 }
-/
-*
-*
-handleLoad
-*
-*
-Called
-when
-a
-load
-event
-is
-fired
-at
-the
-subtest
-'
-s
-iframe
-.
-*
-/
 function
 handleLoad
 (
@@ -2759,577 +2400,6 @@ password
 "
 )
 ;
-/
-/
-Same
-realm
-we
-'
-ve
-already
-authenticated
-to
-but
-with
-a
-different
-/
-/
-expected
-password
-(
-to
-trigger
-an
-auth
-prompt
-and
-change
--
-password
-/
-/
-notification
-bar
-)
-.
-startCallbackTimer
-(
-)
-;
-iframe
-.
-src
-=
-"
-authenticate
-.
-sjs
-?
-user
-=
-mochiuser1
-&
-pass
-=
-mochipass1
--
-new
-"
-;
-break
-;
-case
-1003
-:
-testNum
-+
-+
-;
-is
-(
-authok
-"
-PASS
-"
-"
-Checking
-for
-successful
-authentication
-"
-)
-;
-is
-(
-username
-"
-mochiuser1
-"
-"
-Checking
-for
-echoed
-username
-"
-)
-;
-is
-(
-password
-"
-mochipass1
--
-new
-"
-"
-Checking
-for
-echoed
-password
-"
-)
-;
-/
-/
-Check
-for
-the
-notification
-bar
-and
-change
-the
-password
-.
-bar
-=
-getNotificationBar
-(
-notifyBox
-"
-password
--
-change
-"
-)
-;
-ok
-(
-bar
-"
-got
-notification
-bar
-"
-)
-;
-clickNotificationButton
-(
-bar
-"
-Change
-"
-)
-;
-/
-/
-Housekeeping
-:
-change
-it
-back
-tmpLogin
-.
-init
-(
-"
-http
-:
-/
-/
-localhost
-:
-8888
-"
-null
-"
-mochitest
-"
-"
-mochiuser1
-"
-"
-mochipass1
--
-new
-"
-"
-"
-"
-"
-)
-;
-pwmgr
-.
-modifyLogin
-(
-tmpLogin
-login3A
-)
-;
-/
-/
-Same
-as
-last
-test
-but
-for
-a
-realm
-we
-haven
-'
-t
-already
-authenticated
-/
-/
-to
-(
-but
-have
-an
-existing
-saved
-login
-for
-so
-that
-we
-'
-ll
-trigger
-/
-/
-a
-change
--
-password
-notification
-bar
-.
-startCallbackTimer
-(
-)
-;
-iframe
-.
-src
-=
-"
-authenticate
-.
-sjs
-?
-user
-=
-mochiuser3
-&
-pass
-=
-mochipass3
--
-new
-&
-realm
-=
-mochitest3
-"
-;
-break
-;
-case
-1004
-:
-testNum
-+
-+
-;
-is
-(
-authok
-"
-PASS
-"
-"
-Checking
-for
-successful
-authentication
-"
-)
-;
-is
-(
-username
-"
-mochiuser3
-"
-"
-Checking
-for
-echoed
-username
-"
-)
-;
-is
-(
-password
-"
-mochipass3
--
-new
-"
-"
-Checking
-for
-echoed
-password
-"
-)
-;
-/
-/
-Check
-for
-the
-notification
-bar
-and
-change
-the
-password
-.
-bar
-=
-getNotificationBar
-(
-notifyBox
-"
-password
--
-change
-"
-)
-;
-ok
-(
-bar
-"
-got
-notification
-bar
-"
-)
-;
-clickNotificationButton
-(
-bar
-"
-Change
-"
-)
-;
-/
-/
-Housekeeping
-:
-change
-it
-back
-to
-the
-original
-login4
-.
-Actually
-/
-/
-just
-delete
-it
-and
-we
-'
-ll
-re
--
-add
-it
-as
-the
-next
-test
-.
-tmpLogin
-.
-init
-(
-"
-http
-:
-/
-/
-localhost
-:
-8888
-"
-null
-"
-mochitest3
-"
-"
-mochiuser3
-"
-"
-mochipass3
--
-new
-"
-"
-"
-"
-"
-)
-;
-pwmgr
-.
-removeLogin
-(
-tmpLogin
-)
-;
-/
-/
-Trigger
-a
-new
-prompt
-so
-we
-can
-test
-adding
-a
-new
-login
-.
-startCallbackTimer
-(
-)
-;
-iframe
-.
-src
-=
-"
-authenticate
-.
-sjs
-?
-user
-=
-mochiuser3
-&
-pass
-=
-mochipass3
--
-old
-&
-realm
-=
-mochitest3
-"
-;
-break
-;
-case
-1005
-:
-testNum
-+
-+
-;
-is
-(
-authok
-"
-PASS
-"
-"
-Checking
-for
-successful
-authentication
-"
-)
-;
-is
-(
-username
-"
-mochiuser3
-"
-"
-Checking
-for
-echoed
-username
-"
-)
-;
-is
-(
-password
-"
-mochipass3
--
-old
-"
-"
-Checking
-for
-echoed
-password
-"
-)
-;
-/
-/
-Check
-for
-the
-notification
-bar
-and
-change
-the
-password
-.
-bar
-=
-getNotificationBar
-(
-notifyBox
-"
-password
--
-save
-"
-)
-;
-ok
-(
-bar
-"
-got
-notification
-bar
-"
-)
-;
-clickNotificationButton
-(
-bar
-"
-Remember
-"
-)
-;
 finishTest
 (
 )
@@ -3579,76 +2649,23 @@ isOk
 ;
 /
 /
-The
-notification
-box
-(
-not
-*
-bar
-*
-)
-is
-a
-constant
-per
--
-tab
-container
-.
-So
-we
-/
-/
-only
-need
-to
-fetch
-it
-once
-.
-var
-notifyBox
-=
-getNotificationBox
-(
-window
-.
-top
-)
-;
-ok
-(
-notifyBox
-"
-Got
-notification
-box
-"
-)
-;
-/
-/
-Remove
-any
-notification
-bars
+XXX
+Add
+test
+for
+host
 that
-might
-be
-left
-over
-from
-other
-tests
-.
-notifyBox
-.
-removeAllNotifications
-(
-true
-)
-;
+doesn
+'
+t
+yet
+exist
+to
+test
+login
+-
+saving
+logic
 /
 /
 =
