Bug 458111 - Remove Mac-specific tabbrowser-tab binding. r=rflint
UltraBlame original commit: 3c972117c09e16fbf865e9de884ae152941af9a8

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -13487,23 +13487,12 @@ skin
 tree
 /
 item
+-
+grayscale
 .
 png
 "
 )
-;
-}
-.
-tab
--
-icon
-{
-margin
-:
-0
-0
-3px
-0
 ;
 opacity
 :
@@ -13511,96 +13500,56 @@ opacity
 .
 6
 ;
-}
-.
-tabbrowser
--
-tab
-:
-not
-(
-[
-selected
-=
-"
-true
-"
-]
-)
-:
-hover
-.
-tab
--
-icon
-.
-tabbrowser
--
-tab
-[
-selected
-=
-"
-true
-"
-]
-.
-tab
--
-icon
-{
-opacity
-:
-1
-.
-0
-;
-}
-.
-tab
--
-text
-{
 margin
 -
 top
 :
-0
+2px
 ;
-font
-:
-message
--
-box
-;
-font
--
-weight
-:
-bold
-;
-text
--
-shadow
-:
-0
-1px
-0
-rgba
-(
-255
-255
-255
-0
+}
 .
-4
-)
-;
-padding
+tabbrowser
 -
-bottom
+tab
+[
+selected
+=
+"
+true
+"
+]
+>
+.
+tab
+-
+icon
+-
+image
+{
+list
+-
+style
+-
+image
 :
-1px
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+tree
+/
+item
+.
+png
+"
+)
 ;
 }
 .
@@ -13610,32 +13559,6 @@ tab
 [
 busy
 ]
->
-.
-tab
--
-icon
--
-image
-.
-tabbrowser
--
-tab
-[
-busy
-]
->
-.
-tab
--
-image
--
-middle
->
-.
-tab
--
-icon
 >
 .
 tab
@@ -13676,6 +13599,90 @@ important
 tabbrowser
 -
 tab
+:
+hover
+>
+.
+tab
+-
+icon
+-
+image
+.
+tabbrowser
+-
+tab
+[
+selected
+=
+"
+true
+"
+]
+>
+.
+tab
+-
+icon
+-
+image
+{
+opacity
+:
+1
+;
+}
+.
+tab
+-
+text
+{
+margin
+-
+top
+:
+3px
+;
+margin
+-
+bottom
+:
+0
+;
+font
+:
+message
+-
+box
+;
+font
+-
+weight
+:
+bold
+;
+text
+-
+shadow
+:
+0
+1px
+0
+rgba
+(
+255
+255
+255
+0
+.
+4
+)
+;
+}
+.
+tabbrowser
+-
+tab
 {
 -
 moz
@@ -13693,8 +13700,8 @@ radius
 :
 0
 0
-3px
-3px
+6px
+6px
 ;
 color
 :
@@ -13710,22 +13717,159 @@ pack
 :
 center
 ;
-margin
+-
+moz
+-
+box
+-
+align
 :
-0
-3px
-3px
-2px
+center
+;
+margin
+-
+bottom
+:
+1px
+;
+-
+moz
+-
+margin
+-
+end
+:
+1px
 ;
 padding
 :
-0px
+0
+5px
 ;
 border
+-
+style
 :
 none
-!
-important
+solid
+solid
+;
+border
+-
+width
+:
+3px
+;
+-
+moz
+-
+border
+-
+right
+-
+colors
+:
+rgba
+(
+0
+0
+0
+.
+08
+)
+rgba
+(
+0
+0
+0
+.
+17
+)
+rgba
+(
+180
+180
+180
+.
+29
+)
+;
+-
+moz
+-
+border
+-
+bottom
+-
+colors
+:
+rgba
+(
+0
+0
+0
+.
+08
+)
+rgba
+(
+0
+0
+0
+.
+17
+)
+rgba
+(
+180
+180
+180
+.
+29
+)
+;
+-
+moz
+-
+border
+-
+left
+-
+colors
+:
+rgba
+(
+0
+0
+0
+.
+08
+)
+rgba
+(
+0
+0
+0
+.
+17
+)
+rgba
+(
+180
+180
+180
+.
+29
+)
+;
+-
+moz
+-
+background
+-
+clip
+:
+padding
 ;
 min
 -
@@ -13743,7 +13887,47 @@ center
 ;
 height
 :
-22px
+24px
+;
+}
+.
+tabbrowser
+-
+tab
+:
+not
+(
+[
+selected
+=
+"
+true
+"
+]
+)
+{
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
+-
+bkgnd
+.
+png
+)
 ;
 }
 .
@@ -13766,6 +13950,96 @@ user
 focus
 :
 normal
+;
+padding
+:
+0
+6px
+1px
+;
+border
+-
+width
+:
+2px
+;
+-
+moz
+-
+border
+-
+left
+-
+colors
+:
+rgba
+(
+0
+0
+0
+.
+1
+)
+rgba
+(
+0
+0
+0
+.
+2
+)
+;
+-
+moz
+-
+border
+-
+bottom
+-
+colors
+:
+rgba
+(
+0
+0
+0
+.
+1
+)
+rgba
+(
+0
+0
+0
+.
+2
+)
+;
+-
+moz
+-
+border
+-
+right
+-
+colors
+:
+rgba
+(
+0
+0
+0
+.
+1
+)
+rgba
+(
+0
+0
+0
+.
+2
+)
 ;
 background
 -
@@ -13794,13 +14068,6 @@ true
 ]
 :
 focus
->
-.
-tab
--
-image
--
-middle
 >
 .
 tab
@@ -13853,564 +14120,6 @@ color
 :
 #
 000000
-;
-}
-.
-tab
--
-image
--
-left
-.
-tab
--
-image
--
-right
-{
-width
-:
-8px
-;
-margin
-:
-0px
-;
-padding
-:
-0px
-;
-}
-.
-tab
--
-image
--
-left
-.
-tab
--
-image
--
-right
-.
-tabbrowser
--
-tab
->
-.
-tab
--
-image
--
-middle
-.
-tabbrowser
--
-tab
->
-.
-tab
--
-close
--
-button
-{
-margin
--
-bottom
-:
--
-3px
-;
-padding
--
-top
-:
-1px
-;
-}
-.
-tabbrowser
--
-tab
->
-.
-tab
--
-image
--
-right
-.
-tabbrowser
--
-tab
-[
-chromedir
-=
-"
-rtl
-"
-]
->
-.
-tab
--
-image
--
-left
-{
-margin
--
-right
-:
--
-3px
-;
-background
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-tab
--
-right
-.
-png
-"
-)
-no
--
-repeat
-;
-}
-.
-tabbrowser
--
-tab
-:
-not
-(
-[
-selected
-=
-"
-true
-"
-]
-)
->
-.
-tab
--
-image
--
-right
-.
-tabbrowser
--
-tab
-:
-not
-(
-[
-selected
-=
-"
-true
-"
-]
-)
-[
-chromedir
-=
-"
-rtl
-"
-]
->
-.
-tab
--
-image
--
-left
-{
-background
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-tab
--
-right
--
-bkgnd
-.
-png
-"
-)
-no
--
-repeat
-;
-}
-.
-tabbrowser
--
-tab
->
-.
-tab
--
-image
--
-left
-.
-tabbrowser
--
-tab
-[
-chromedir
-=
-"
-rtl
-"
-]
->
-.
-tab
--
-image
--
-right
-{
-margin
--
-left
-:
--
-2px
-;
-background
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-tab
--
-left
-.
-png
-"
-)
-no
--
-repeat
-;
-}
-.
-tabbrowser
--
-tab
-:
-not
-(
-[
-selected
-=
-"
-true
-"
-]
-)
->
-.
-tab
--
-image
--
-left
-.
-tabbrowser
--
-tab
-:
-not
-(
-[
-selected
-=
-"
-true
-"
-]
-)
-[
-chromedir
-=
-"
-rtl
-"
-]
->
-.
-tab
--
-image
--
-right
-{
-background
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-tab
--
-left
--
-bkgnd
-.
-png
-"
-)
-no
--
-repeat
-;
-}
-.
-tabbrowser
--
-tab
->
-.
-tab
--
-image
--
-middle
-.
-tabbrowser
--
-tab
->
-.
-tab
--
-close
--
-button
-{
-background
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-tab
--
-middle
-.
-png
-"
-)
-repeat
--
-x
-;
--
-moz
--
-box
--
-pack
-:
-center
-;
-}
-.
-tabbrowser
--
-tab
-:
-not
-(
-[
-selected
-=
-"
-true
-"
-]
-)
->
-.
-tab
--
-image
--
-middle
-.
-tabbrowser
--
-tab
-:
-not
-(
-[
-selected
-=
-"
-true
-"
-]
-)
->
-.
-tab
--
-close
--
-button
-{
-background
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-tab
--
-middle
--
-bkgnd
-.
-png
-"
-)
-;
-}
-.
-tabbrowser
--
-tab
-:
-not
-(
-[
-selected
-=
-"
-true
-"
-]
-)
->
-.
-tab
--
-image
--
-middle
->
-.
-tab
--
-icon
->
-.
-tab
--
-icon
--
-image
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-tree
-/
-item
--
-grayscale
-.
-png
-"
-)
 ;
 }
 .
@@ -14721,6 +14430,10 @@ top
 :
 1px
 ;
+padding
+:
+0
+;
 }
 .
 tab
@@ -14770,17 +14483,16 @@ important
 padding
 :
 0
-0
-3px
-0
 ;
 margin
 :
+1px
+0
 0
 ;
 background
 :
-inherit
+none
 ;
 cursor
 :
