--- a/layout/style/test/test_media_queries.html
+++ b/layout/style/test/test_media_queries.html
@@ -4577,6 +4577,134 @@ all
 "
 )
 ;
+/
+/
+bug
+454226
+should_apply
+(
+"
+all
+"
+)
+;
+should_apply
+(
+"
+all
+"
+)
+;
+should_apply
+(
+"
+all
+"
+)
+;
+should_apply
+(
+"
+all
+badmedium
+"
+)
+;
+should_apply
+(
+"
+badmedium
+all
+"
+)
+;
+should_not_apply
+(
+"
+badmedium
+"
+)
+;
+should_apply
+(
+"
+all
+(
+badexpression
+)
+"
+)
+;
+should_apply
+(
+"
+(
+badexpression
+)
+all
+"
+)
+;
+should_not_apply
+(
+"
+(
+badexpression
+)
+badmedium
+"
+)
+;
+should_not_apply
+(
+"
+badmedium
+(
+badexpression
+)
+"
+)
+;
+should_apply
+(
+"
+all
+[
+badsyntax
+]
+"
+)
+;
+should_apply
+(
+"
+[
+badsyntax
+]
+all
+"
+)
+;
+should_not_apply
+(
+"
+badmedium
+[
+badsyntax
+]
+"
+)
+;
+should_not_apply
+(
+"
+[
+badsyntax
+]
+badmedium
+"
+)
+;
 SimpleTest
 .
 finish
