Bug 459546 - Fix about:sessionrestore gnomestripe issues. r=zeniko
UltraBlame original commit: 27efd8a373aaf5acf9991a156600004d3a951894

--- a/browser/themes/gnomestripe/browser/aboutSessionRestore.css
+++ b/browser/themes/gnomestripe/browser/aboutSessionRestore.css
@@ -199,6 +199,17 @@ s
 )
 :
 *
+Michael
+Ventnor
+<
+m
+.
+ventnor
+gmail
+.
+com
+>
+*
 *
 Alternatively
 the
@@ -403,21 +414,23 @@ image
 url
 (
 "
-chrome
+moz
+-
+icon
 :
 /
 /
-global
+stock
 /
-skin
-/
-icons
-/
-question
+gtk
 -
-48
-.
-png
+dialog
+-
+question
+?
+size
+=
+dialog
 "
 )
 ;
@@ -542,68 +555,22 @@ image
 url
 (
 "
-chrome
+moz
+-
+icon
 :
 /
 /
-global
+stock
 /
-skin
-/
-icons
-/
-folder
+gtk
 -
-item
-.
-png
+directory
+?
+size
+=
+menu
 "
-)
-;
--
-moz
--
-image
--
-region
-:
-rect
-(
-0px
-32px
-16px
-16px
-)
-;
-}
-treechildren
-:
-:
--
-moz
--
-tree
--
-image
-(
-container
-open
-noicon
-)
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-16px
-32px
-32px
-16px
 )
 ;
 }
@@ -691,22 +658,6 @@ gif
 )
 ;
 }
-/
-*
-XXXzeniko
-will
-need
-an
-appropriate
-color
-here
-(
-or
-none
-?
-)
-*
-/
 treechildren
 :
 :
@@ -724,8 +675,10 @@ background
 -
 color
 :
-#
-EEEEEE
+-
+moz
+-
+oddtreerow
 ;
 }
 treechildren
@@ -757,6 +710,15 @@ width
 100
 %
 ;
+-
+moz
+-
+box
+-
+direction
+:
+reverse
+;
 }
 #
 buttons
@@ -768,5 +730,14 @@ margin
 top
 :
 2em
+;
+-
+moz
+-
+margin
+-
+start
+:
+5px
 ;
 }
