Bug 459457 - global.css cleanup: kill formatting.css, remove obsolete stuff, rtl fixes and more. r=neil
UltraBlame original commit: 61021ed80a2e3475abc3aeea09e58e9de991dc7e

--- a/toolkit/themes/gnomestripe/global/groupbox.css
+++ b/toolkit/themes/gnomestripe/global/groupbox.css
@@ -620,3 +620,39 @@ weight
 bold
 ;
 }
+.
+caption
+-
+text
+{
+margin
+-
+top
+:
+0
+;
+margin
+-
+bottom
+:
+0
+;
+-
+moz
+-
+margin
+-
+start
+:
+1px
+;
+-
+moz
+-
+margin
+-
+end
+:
+2px
+;
+}
