--- a/toolkit/themes/gnomestripe/global/global.css
+++ b/toolkit/themes/gnomestripe/global/global.css
@@ -563,24 +563,6 @@ css
 "
 )
 ;
-import
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-formatting
-.
-css
-"
-)
-;
 namespace
 url
 (
@@ -848,29 +830,44 @@ message
 box
 ;
 }
+/
+*
+deprecated
+*
+/
 window
 .
 dialog
 {
 padding
+-
+top
 :
-8px
-10px
-10px
 8px
 ;
-}
-[
-wait
+padding
 -
-cursor
-]
-{
-cursor
+bottom
 :
-wait
-!
-important
+10px
+;
+-
+moz
+-
+padding
+-
+start
+:
+8px
+;
+-
+moz
+-
+padding
+-
+end
+:
+10px
 ;
 }
 /
@@ -1301,7 +1298,7 @@ resizerpanel
 ;
 padding
 :
-0px
+0
 ;
 border
 :
@@ -1327,9 +1324,7 @@ iconic
 {
 padding
 :
-0px
-1px
-0px
+0
 1px
 ;
 }
@@ -1410,21 +1405,6 @@ start
 4px
 ;
 }
-/
-*
-:
-:
-:
-:
-:
-miscellaneous
-:
-:
-:
-:
-:
-*
-/
 .
 toolbar
 -
@@ -1440,6 +1420,492 @@ focus
 ignore
 !
 important
+;
+}
+/
+*
+:
+:
+:
+:
+:
+miscellaneous
+formatting
+:
+:
+:
+:
+:
+*
+/
+.
+inset
+{
+border
+:
+1px
+solid
+ThreeDShadow
+;
+border
+-
+right
+-
+color
+:
+ThreeDHighlight
+;
+border
+-
+bottom
+-
+color
+:
+ThreeDHighlight
+;
+margin
+:
+0
+5px
+5px
+;
+}
+.
+outset
+{
+border
+:
+1px
+solid
+ThreeDShadow
+;
+border
+-
+left
+-
+color
+:
+ThreeDHighlight
+;
+border
+-
+top
+-
+color
+:
+ThreeDHighlight
+;
+}
+separator
+:
+not
+(
+[
+orient
+=
+"
+vertical
+"
+]
+)
+{
+height
+:
+1
+.
+5em
+;
+}
+separator
+[
+orient
+=
+"
+vertical
+"
+]
+{
+width
+:
+1
+.
+5em
+;
+}
+separator
+.
+thin
+:
+not
+(
+[
+orient
+=
+"
+vertical
+"
+]
+)
+{
+height
+:
+0
+.
+5em
+;
+}
+separator
+.
+thin
+[
+orient
+=
+"
+vertical
+"
+]
+{
+width
+:
+0
+.
+5em
+;
+}
+separator
+.
+groove
+:
+not
+(
+[
+orient
+=
+"
+vertical
+"
+]
+)
+{
+border
+-
+top
+:
+1px
+solid
+ThreeDShadow
+;
+border
+-
+bottom
+:
+1px
+solid
+ThreeDHighlight
+;
+height
+:
+0
+;
+margin
+-
+top
+:
+0
+.
+4em
+;
+margin
+-
+bottom
+:
+0
+.
+4em
+;
+}
+separator
+.
+groove
+[
+orient
+=
+"
+vertical
+"
+]
+{
+border
+-
+left
+:
+1px
+solid
+ThreeDShadow
+;
+border
+-
+right
+:
+1px
+solid
+ThreeDHighlight
+;
+width
+:
+0
+;
+margin
+-
+left
+:
+0
+.
+4em
+;
+margin
+-
+right
+:
+0
+.
+4em
+;
+}
+.
+small
+-
+margin
+{
+margin
+:
+1px
+2px
+;
+}
+.
+plain
+{
+margin
+:
+0
+!
+important
+;
+border
+:
+none
+;
+padding
+:
+0
+;
+}
+description
+label
+{
+cursor
+:
+default
+;
+margin
+-
+top
+:
+1px
+;
+margin
+-
+bottom
+:
+2px
+;
+-
+moz
+-
+margin
+-
+start
+:
+6px
+;
+-
+moz
+-
+margin
+-
+end
+:
+5px
+;
+}
+description
+{
+margin
+-
+bottom
+:
+4px
+;
+}
+label
+[
+disabled
+=
+"
+true
+"
+]
+{
+color
+:
+GrayText
+;
+}
+.
+header
+{
+font
+-
+weight
+:
+bold
+;
+}
+.
+monospace
+{
+font
+-
+family
+:
+monospace
+;
+}
+.
+indent
+{
+-
+moz
+-
+margin
+-
+start
+:
+23px
+;
+}
+.
+box
+-
+padded
+{
+padding
+:
+5px
+;
+}
+.
+spaced
+{
+margin
+:
+3px
+5px
+4px
+;
+}
+.
+wizard
+-
+box
+{
+padding
+:
+20px
+44px
+10px
+;
+}
+.
+text
+-
+link
+{
+color
+:
+-
+moz
+-
+nativehyperlinktext
+;
+text
+-
+decoration
+:
+underline
+;
+border
+:
+1px
+solid
+transparent
+;
+cursor
+:
+pointer
+;
+}
+.
+text
+-
+link
+:
+focus
+{
+color
+:
+red
+;
+border
+:
+1px
+dotted
+-
+moz
+-
+DialogText
+;
+}
+.
+text
+-
+link
+:
+hover
+:
+active
+{
+color
+:
+red
+;
+}
+.
+text
+-
+link
+[
+visited
+=
+"
+true
+"
+]
+{
+color
+:
+purple
 ;
 }
 /
