--- a/toolkit/themes/pinstripe/global/global.css
+++ b/toolkit/themes/pinstripe/global/global.css
@@ -572,24 +572,6 @@ css
 "
 )
 ;
-import
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-formatting
-.
-css
-"
-)
-;
 namespace
 url
 (
@@ -618,259 +600,6 @@ xul
 "
 )
 ;
-button
-[
-dlgtype
-=
-"
-help
-"
-]
-{
-min
--
-width
-:
-1px
-!
-important
-;
-padding
-:
-0px
-0px
-0px
-0px
-!
-important
-;
--
-moz
--
-appearance
-:
-none
-;
--
-moz
--
-box
--
-align
-:
-start
-!
-important
-;
-height
-:
-24px
-;
-width
-:
-24px
-;
-margin
-:
-4px
-;
-}
-button
-[
-dlgtype
-=
-"
-help
-"
-]
-[
-disabled
-]
-{
-opacity
-:
-0
-.
-5
-;
-}
-button
-[
-dlgtype
-=
-"
-help
-"
-]
-:
-focus
-{
-outline
-:
-2px
-solid
--
-moz
--
-mac
--
-focusring
-;
-outline
--
-offset
-:
--
-2px
-;
--
-moz
--
-outline
--
-radius
-:
-100
-%
-;
-}
-button
-[
-dlgtype
-=
-"
-help
-"
-]
->
-.
-button
--
-box
->
-.
-button
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-question
--
-mark
-.
-png
-"
-)
-;
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-24px
-24px
-0
-)
-;
-padding
-:
-0
-!
-important
-;
-margin
-:
-0
-!
-important
-;
-}
-button
-[
-dlgtype
-=
-"
-help
-"
-]
-:
-active
->
-.
-button
--
-box
->
-.
-button
--
-icon
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-48px
-24px
-24px
-)
-;
-}
-button
-[
-dlgtype
-=
-"
-help
-"
-]
->
-.
-button
--
-box
->
-.
-button
--
-text
-{
-display
-:
-none
-!
-important
-;
-}
 /
 *
 :
@@ -1079,13 +808,34 @@ child
 ]
 {
 padding
+-
+top
 :
 18px
-20px
+;
+padding
+-
+bottom
+:
 15px
+;
+-
+moz
+-
+padding
+-
+start
+:
 18px
-!
-important
+;
+-
+moz
+-
+padding
+-
+end
+:
+20px
 ;
 }
 /
@@ -1098,24 +848,34 @@ window
 dialog
 {
 padding
+-
+top
 :
-8px
-10px
-10px
 8px
 ;
-}
-[
-wait
+padding
 -
-cursor
-]
-{
-cursor
+bottom
 :
-wait
-!
-important
+10px
+;
+-
+moz
+-
+padding
+-
+start
+:
+8px
+;
+-
+moz
+-
+padding
+-
+end
+:
+10px
 ;
 }
 /
@@ -1138,6 +898,12 @@ icons
 message
 -
 icon
+{
+display
+:
+none
+;
+}
 .
 alert
 -
@@ -1159,41 +925,18 @@ height
 :
 64px
 ;
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-information
--
-64
-.
-png
-"
-)
-;
 margin
 :
 6px
+;
+-
+moz
+-
+margin
+-
+end
+:
 20px
-6px
-6px
-!
-important
 ;
 }
 .
@@ -1493,6 +1236,7 @@ padding
 :
 :
 miscellaneous
+formatting
 :
 :
 :
@@ -1500,6 +1244,471 @@ miscellaneous
 :
 *
 /
+.
+inset
+{
+border
+:
+1px
+solid
+ThreeDShadow
+;
+border
+-
+right
+-
+color
+:
+ThreeDHighlight
+;
+border
+-
+bottom
+-
+color
+:
+ThreeDHighlight
+;
+margin
+:
+0
+5px
+5px
+;
+}
+.
+outset
+{
+border
+:
+1px
+solid
+ThreeDShadow
+;
+border
+-
+left
+-
+color
+:
+ThreeDHighlight
+;
+border
+-
+top
+-
+color
+:
+ThreeDHighlight
+;
+}
+separator
+:
+not
+(
+[
+orient
+=
+"
+vertical
+"
+]
+)
+{
+height
+:
+1
+.
+5em
+;
+}
+separator
+[
+orient
+=
+"
+vertical
+"
+]
+{
+width
+:
+1
+.
+5em
+;
+}
+separator
+.
+thin
+:
+not
+(
+[
+orient
+=
+"
+vertical
+"
+]
+)
+{
+height
+:
+0
+.
+5em
+;
+}
+separator
+.
+thin
+[
+orient
+=
+"
+vertical
+"
+]
+{
+width
+:
+0
+.
+5em
+;
+}
+separator
+.
+groove
+:
+not
+(
+[
+orient
+=
+"
+vertical
+"
+]
+)
+{
+border
+-
+top
+:
+1px
+solid
+#
+A3A3A3
+;
+height
+:
+0
+;
+margin
+-
+top
+:
+0
+.
+4em
+;
+margin
+-
+bottom
+:
+0
+.
+4em
+;
+}
+separator
+.
+groove
+[
+orient
+=
+"
+vertical
+"
+]
+{
+border
+-
+left
+:
+1px
+solid
+#
+A3A3A3
+;
+width
+:
+0
+;
+margin
+-
+left
+:
+0
+.
+4em
+;
+margin
+-
+right
+:
+0
+.
+4em
+;
+}
+.
+small
+-
+margin
+{
+margin
+:
+1px
+2px
+;
+}
+.
+plain
+{
+margin
+:
+0
+!
+important
+;
+border
+:
+none
+;
+padding
+:
+0
+;
+}
+description
+label
+{
+cursor
+:
+default
+;
+}
+label
+{
+margin
+-
+top
+:
+1px
+;
+margin
+-
+bottom
+:
+2px
+;
+-
+moz
+-
+margin
+-
+start
+:
+6px
+;
+-
+moz
+-
+margin
+-
+end
+:
+5px
+;
+}
+label
+[
+disabled
+=
+"
+true
+"
+]
+{
+color
+:
+GrayText
+;
+}
+description
+{
+margin
+-
+bottom
+:
+4px
+;
+}
+.
+header
+{
+margin
+-
+bottom
+:
+6px
+;
+font
+-
+weight
+:
+bold
+;
+}
+.
+monospace
+{
+font
+-
+family
+:
+monospace
+;
+}
+.
+indent
+{
+-
+moz
+-
+margin
+-
+start
+:
+23px
+;
+}
+.
+box
+-
+padded
+{
+padding
+:
+5px
+;
+}
+.
+spaced
+{
+margin
+:
+3px
+5px
+4px
+;
+}
+.
+wizard
+-
+box
+{
+padding
+:
+20px
+44px
+10px
+;
+}
+.
+text
+-
+link
+{
+color
+:
+-
+moz
+-
+nativehyperlinktext
+;
+text
+-
+decoration
+:
+underline
+;
+border
+:
+1px
+solid
+transparent
+;
+cursor
+:
+pointer
+;
+}
+.
+text
+-
+link
+:
+focus
+{
+color
+:
+red
+;
+border
+:
+1px
+dotted
+-
+moz
+-
+DialogText
+;
+}
+.
+text
+-
+link
+:
+hover
+:
+active
+{
+color
+:
+red
+;
+}
+.
+text
+-
+link
+[
+visited
+=
+"
+true
+"
+]
+{
+color
+:
+purple
+;
+}
 .
 toolbar
 -
@@ -1517,78 +1726,42 @@ ignore
 important
 ;
 }
-#
-info
+/
+*
+:
+:
+:
+:
+:
+XXX
+-
+stuff
+that
+should
+live
+elsewhere
+:
+:
+:
+:
+:
+*
+/
+/
+*
+embedding
+/
+components
+/
+ui
+/
+progressDlg
+/
+nsProgressDialog
 .
-icon
-{
-margin
--
-right
-:
-14px
-;
-}
-#
-commonDialog
-{
-line
--
-height
-:
-13px
-;
-}
-#
-commonDialog
-#
-infoContainer
-{
-max
--
-width
-:
-33em
-!
-important
-;
-}
-#
-header
-{
-display
-:
-none
-!
-important
-;
-}
-#
-warn1
-{
-font
-:
-menu
-;
-font
--
-weight
-:
-bold
-;
-line
--
-height
-:
-16pt
-;
-padding
--
-bottom
-:
-10px
-;
-}
+xul
+*
+/
 #
 ok
 #
@@ -1607,18 +1780,19 @@ menu
 important
 ;
 }
+/
+*
+toolkit
+/
+content
+/
+widgets
+/
+optionsDialog
 .
-message
--
-icon
-{
-display
-:
-none
-!
-important
-;
-}
+xml
+*
+/
 #
 panelFrame
 {
@@ -1628,44 +1802,27 @@ top
 :
 2px
 ;
+-
+moz
+-
 padding
 -
-left
+start
 :
 10px
 ;
 }
-description
-{
-margin
--
-bottom
-:
-4px
-;
-}
-browser
-{
-margin
-:
-0px
-;
-padding
-:
-0px
-;
-background
--
-color
-:
-#
-FFFFFF
-;
-}
 /
 *
-miscellaneous
-stuff
+toolkit
+/
+mozapps
+/
+preferences
+/
+ocsp
+.
+xul
 *
 /
 #
@@ -1676,244 +1833,6 @@ font
 message
 -
 box
-;
-}
-#
-historyTree
-#
-bookmarks
--
-view
-{
-border
--
-top
-:
-1px
-solid
-#
-bebebe
-;
-}
-/
-*
-notification
-bar
-buttons
-*
-/
-notification
->
-button
-{
--
-moz
--
-appearance
-:
-none
-;
-background
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-white
--
-gray
--
-gradient
-.
-gif
-"
-)
-transparent
-repeat
--
-x
-center
-center
-;
--
-moz
--
-background
--
-clip
-:
-padding
-;
-border
-:
-1px
-solid
-;
-border
--
-bottom
--
-width
-:
-2px
-;
--
-moz
--
-border
--
-radius
-:
-10px
-;
--
-moz
--
-border
--
-top
--
-colors
-:
-rgba
-(
-0
-0
-0
-0
-.
-5
-)
-;
--
-moz
--
-border
--
-right
--
-colors
-:
-rgba
-(
-0
-0
-0
-0
-.
-5
-)
-;
--
-moz
--
-border
--
-bottom
--
-colors
-:
-rgba
-(
-255
-255
-255
-0
-.
-35
-)
-rgba
-(
-0
-0
-0
-0
-.
-5
-)
-;
--
-moz
--
-border
--
-left
--
-colors
-:
-rgba
-(
-0
-0
-0
-0
-.
-5
-)
-;
-padding
-:
-0
-5px
-;
-min
--
-width
-:
-79px
-;
-min
--
-height
-:
-17px
-;
-}
-notification
->
-button
-:
-hover
-:
-active
-{
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-white
--
-gray
--
-gradient
--
-active
-.
-gif
-"
-)
 ;
 }
 /
