--- a/toolkit/themes/pinstripe/global/groupbox.css
+++ b/toolkit/themes/pinstripe/global/groupbox.css
@@ -644,3 +644,39 @@ font
 caption
 ;
 }
+.
+caption
+-
+text
+{
+margin
+-
+top
+:
+0
+;
+margin
+-
+bottom
+:
+0
+;
+-
+moz
+-
+margin
+-
+start
+:
+1px
+;
+-
+moz
+-
+margin
+-
+end
+:
+2px
+;
+}
