--- a/toolkit/themes/winstripe/global/groupbox.css
+++ b/toolkit/themes/winstripe/global/groupbox.css
@@ -727,3 +727,39 @@ color
 menu
 ;
 }
+.
+caption
+-
+text
+{
+margin
+-
+top
+:
+0
+;
+margin
+-
+bottom
+:
+0
+;
+-
+moz
+-
+margin
+-
+start
+:
+1px
+;
+-
+moz
+-
+margin
+-
+end
+:
+2px
+;
+}
