--- a/toolkit/themes/pinstripe/global/global.css
+++ b/toolkit/themes/pinstripe/global/global.css
@@ -734,6 +734,135 @@ redraw
 :
 :
 :
+draggable
+elements
+:
+:
+:
+:
+:
+*
+/
+toolbar
+:
+not
+(
+[
+nowindowdrag
+=
+"
+true
+"
+]
+)
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+content
+/
+bindings
+/
+toolbar
+.
+xml
+#
+toolbar
+-
+drag
+"
+)
+;
+}
+statusbar
+:
+not
+(
+[
+nowindowdrag
+=
+"
+true
+"
+]
+)
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+content
+/
+bindings
+/
+general
+.
+xml
+#
+statusbar
+-
+drag
+"
+)
+;
+}
+windowdragbox
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+content
+/
+bindings
+/
+general
+.
+xml
+#
+windowdragbox
+"
+)
+;
+}
+/
+*
+:
+:
+:
+:
+:
 root
 elements
 :
