Bug 459218 - Wizard back and next / finish buttons have incorrect space between them (wonstripe). r=dtownsend
UltraBlame original commit: beb27b78ba0b6b7684ee714fcce5cf4e2cb16c86

--- a/toolkit/themes/winstripe/global/wizard.css
+++ b/toolkit/themes/winstripe/global/wizard.css
@@ -222,7 +222,7 @@ wizard
 -
 button
 [
-wizardbutton
+dlgtype
 =
 "
 finish
@@ -233,7 +233,7 @@ wizard
 -
 button
 [
-wizardbutton
+dlgtype
 =
 "
 next
@@ -247,8 +247,7 @@ margin
 -
 start
 :
--
-1px
+0px
 !
 important
 ;
@@ -258,7 +257,7 @@ wizard
 -
 button
 [
-wizardbutton
+dlgtype
 =
 "
 back
