Bug 432436 - Selected browser sidebar items have padding, r+ui-r=mconnor
UltraBlame original commit: ea37481b68030c4931666522b8d21788105feafd

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -12360,6 +12360,15 @@ ELEMENTS
 /
 #
 sidebar
+{
+background
+-
+color
+:
+#
+d4dde5
+;
+}
 sidebarheader
 {
 background
@@ -12372,12 +12381,6 @@ d4dde5
 padding
 :
 2px
-;
-text
--
-transform
-:
-uppercase
 ;
 }
 #
