Revert nsprpub configure micro-change in case that caused Windows bustage
UltraBlame original commit: f95d9314db184fe9de59badf6501a41e188e4346

--- a/layout/reftests/bugs/413286-1a.html
+++ b/layout/reftests/bugs/413286-1a.html
@@ -28,7 +28,13 @@ lightblue
 ;
 color
 :
-lightblue
+rgba
+(
+0
+0
+0
+0
+)
 }
 td
 .
@@ -40,7 +46,13 @@ lightgreen
 ;
 color
 :
-lightgreen
+rgba
+(
+0
+0
+0
+0
+)
 }
 col
 .
