--- a/layout/reftests/bugs/427370-1.html
+++ b/layout/reftests/bugs/427370-1.html
@@ -221,6 +221,21 @@ direction
 ltr
 ;
 }
+.
+C
+{
+padding
+:
+0
+0
+.
+2em
+0
+0
+.
+2em
+;
+}
 <
 /
 style
@@ -351,7 +366,19 @@ div
 <
 div
 >
+<
+span
+class
+=
+"
 C
+"
+>
+C
+<
+/
+span
+>
 <
 /
 div
@@ -407,7 +434,19 @@ div
 <
 div
 >
+<
+span
+class
+=
+"
 C
+"
+>
+C
+<
+/
+span
+>
 <
 /
 div
@@ -502,7 +541,19 @@ div
 <
 div
 >
+<
+span
+class
+=
+"
 C
+"
+>
+C
+<
+/
+span
+>
 <
 /
 div
@@ -597,7 +648,19 @@ div
 <
 div
 >
+<
+span
+class
+=
+"
 C
+"
+>
+C
+<
+/
+span
+>
 <
 /
 div
