--- a/layout/reftests/bugs/430813-3-ref.html
+++ b/layout/reftests/bugs/430813-3-ref.html
@@ -103,6 +103,19 @@ left
 90px
 "
 >
+<
+span
+style
+=
+"
+padding
+:
+0
+.
+2em
+;
+"
+>
 This
 text
 should
@@ -119,6 +132,10 @@ below
 the
 float
 .
+<
+/
+span
+>
 <
 /
 div
