--- a/layout/reftests/bugs/413286-1b.html
+++ b/layout/reftests/bugs/413286-1b.html
@@ -28,7 +28,13 @@ lightblue
 ;
 color
 :
-lightblue
+rgba
+(
+0
+0
+0
+0
+)
 }
 td
 .
@@ -40,7 +46,13 @@ lightgreen
 ;
 color
 :
-lightgreen
+rgba
+(
+0
+0
+0
+0
+)
 }
 col
 .
