--- a/layout/reftests/bugs/427370-1-ref.html
+++ b/layout/reftests/bugs/427370-1-ref.html
@@ -221,6 +221,21 @@ direction
 ltr
 ;
 }
+.
+C
+{
+padding
+:
+0
+0
+.
+2em
+0
+0
+.
+2em
+;
+}
 <
 /
 style
@@ -377,7 +392,19 @@ div
 <
 div
 >
+<
+span
+class
+=
+"
 C
+"
+>
+C
+<
+/
+span
+>
 <
 /
 div
@@ -463,7 +490,19 @@ div
 <
 div
 >
+<
+span
+class
+=
+"
 C
+"
+>
+C
+<
+/
+span
+>
 <
 /
 div
@@ -588,7 +627,19 @@ div
 <
 div
 >
+<
+span
+class
+=
+"
 C
+"
+>
+C
+<
+/
+span
+>
 <
 /
 div
@@ -713,7 +764,19 @@ div
 <
 div
 >
+<
+span
+class
+=
+"
 C
+"
+>
+C
+<
+/
+span
+>
 <
 /
 div
