--- a/layout/reftests/bugs/430813-3.html
+++ b/layout/reftests/bugs/430813-3.html
@@ -101,6 +101,19 @@ overflow
 hidden
 "
 >
+<
+span
+style
+=
+"
+padding
+:
+0
+.
+2em
+;
+"
+>
 This
 text
 should
@@ -117,6 +130,10 @@ below
 the
 float
 .
+<
+/
+span
+>
 <
 /
 div
