Revert layout test changes that shouldn't have landed in the previous commit :-(
UltraBlame original commit: d0f5f2fff400e5a1ae638f564b82639a312c0aa3

--- a/layout/reftests/bugs/413286-1a.html
+++ b/layout/reftests/bugs/413286-1a.html
@@ -28,13 +28,7 @@ lightblue
 ;
 color
 :
-rgba
-(
-0
-0
-0
-0
-)
+lightblue
 }
 td
 .
@@ -46,13 +40,7 @@ lightgreen
 ;
 color
 :
-rgba
-(
-0
-0
-0
-0
-)
+lightgreen
 }
 col
 .
