--- a/layout/reftests/bugs/413286-1b.html
+++ b/layout/reftests/bugs/413286-1b.html
@@ -28,13 +28,7 @@ lightblue
 ;
 color
 :
-rgba
-(
-0
-0
-0
-0
-)
+lightblue
 }
 td
 .
@@ -46,13 +40,7 @@ lightgreen
 ;
 color
 :
-rgba
-(
-0
-0
-0
-0
-)
+lightgreen
 }
 col
 .
