Bug 157546. The 'delete' key should delete an entire cluster. r=peterv,r+sr=roc
UltraBlame original commit: 34967ab14be8eebb21c72eab7a790252df73ff2b

--- a/layout/generic/test/test_backspace_delete.html
+++ b/layout/generic/test/test_backspace_delete.html
@@ -462,16 +462,6 @@ editor
 "
 )
 ;
-var
-todo1
-=
-false
-;
-var
-todo2
-=
-false
-;
 function
 testRight
 (
@@ -513,16 +503,7 @@ innerHTML
 "
 )
 ;
-var
-is_func2
-=
-todo2
-?
-todo_is
-:
 is
-;
-is_func2
 (
 sel
 .
@@ -712,16 +693,7 @@ innerHTML
 "
 )
 ;
-var
-is_func2
-=
-todo2
-?
-todo_is
-:
 is
-;
-is_func2
 (
 sel
 .
@@ -745,16 +717,7 @@ innerHTML
 "
 )
 ;
-var
-is_func1
-=
-todo1
-?
-todo_is
-:
 is
-;
-is_func1
 (
 editor
 .
@@ -895,10 +858,6 @@ firstChild
 0
 )
 ;
-todo1
-=
-true
-;
 testRight
 (
 editor
@@ -971,10 +930,6 @@ firstChild
 "
 )
 ;
-todo2
-=
-true
-;
 testRight
 (
 editor
@@ -1010,14 +965,6 @@ firstChild
 "
 "
 )
-;
-todo1
-=
-false
-;
-todo2
-=
-false
 ;
 /
 /
@@ -1460,6 +1407,92 @@ editor
 ;
 restoreEatSpace
 (
+)
+;
+/
+/
+Tests
+for
+Bug
+419217
+editor
+.
+innerHTML
+=
+"
+foo
+<
+div
+>
+bar
+<
+/
+div
+>
+"
+;
+sel
+.
+collapse
+(
+editor
+.
+firstChild
+3
+)
+;
+testDelete
+(
+editor
+.
+firstChild
+3
+"
+foobar
+"
+)
+;
+/
+/
+Tests
+for
+Bug
+419406
+editor
+.
+innerHTML
+=
+"
+hello
+"
+;
+sel
+.
+collapse
+(
+editor
+.
+firstChild
+4
+)
+;
+testRight
+(
+editor
+.
+firstChild
+5
+)
+;
+testDelete
+(
+editor
+.
+firstChild
+5
+"
+hello
+"
 )
 ;
 SimpleTest
