Make this test pass in profiles where the default charset is not ISO-8859-1
UltraBlame original commit: 99dbf3b2688bb44405bf3daa5bffb0028dc69d7f

--- a/layout/reftests/bugs/306630-1-ref.html
+++ b/layout/reftests/bugs/306630-1-ref.html
@@ -8,6 +8,41 @@ rows
 "
 >
 <
+!
+-
+-
+Have
+to
+specify
+charset
+=
+ISO
+-
+8859
+-
+1
+because
+that
+'
+s
+what
+javascript
+:
+will
+do
+and
+the
+fonts
+used
+depend
+on
+the
+charset
+.
+-
+-
+>
+<
 frame
 src
 =
@@ -17,6 +52,14 @@ data
 text
 /
 html
+;
+charset
+=
+ISO
+-
+8859
+-
+1
 frame1
 "
 >
@@ -30,6 +73,14 @@ data
 text
 /
 html
+;
+charset
+=
+ISO
+-
+8859
+-
+1
 frame2
 "
 >
