Hack to work around bug 426195.
UltraBlame original commit: ae5a56cf28212eafeb3c88281099047972a09dcd

--- a/layout/generic/test/test_bug459921.html
+++ b/layout/generic/test/test_bug459921.html
@@ -321,9 +321,9 @@ web
 {
 type
 :
-"
+'
 mousedown
-"
+'
 clickCount
 :
 2
@@ -367,9 +367,9 @@ wide
 {
 type
 :
-"
+'
 mousemove
-"
+'
 accelKey
 :
 true
@@ -384,9 +384,9 @@ wide
 {
 type
 :
-"
+'
 mouseup
-"
+'
 clickCount
 :
 2
@@ -408,10 +408,66 @@ toString
 is
 (
 selstr
-"
+'
 Wide
 Web
-"
+'
+)
+;
+/
+/
+Hack
+to
+work
+around
+bug
+426195
+synthesizeMouse
+(
+document
+.
+body
+0
+0
+{
+type
+:
+'
+mousedown
+'
+}
+)
+;
+synthesizeMouse
+(
+document
+.
+body
+0
+0
+{
+type
+:
+'
+mousemove
+'
+}
+)
+;
+synthesizeMouse
+(
+document
+.
+body
+0
+0
+{
+type
+:
+'
+mouseup
+'
+}
 )
 ;
 SimpleTest
