--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -308,6 +308,73 @@ none
 ;
 }
 #
+urlbar
+[
+pageproxystate
+=
+"
+invalid
+"
+]
+>
+#
+urlbar
+-
+icons
+>
+:
+not
+(
+#
+go
+-
+button
+)
+#
+urlbar
+[
+pageproxystate
+=
+"
+valid
+"
+]
+>
+#
+urlbar
+-
+icons
+>
+#
+go
+-
+button
+#
+urlbar
+[
+empty
+=
+"
+true
+"
+]
+>
+#
+urlbar
+-
+icons
+>
+#
+go
+-
+button
+{
+visibility
+:
+collapse
+;
+}
+#
 identity
 -
 box
