Bug 449522 - Context menu for HTML5 <video> elements. r=gavin, ui-r=boriss
UltraBlame original commit: 50053981fd5d06b655b1965bc2e50a5fa168cb71

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -1975,6 +1975,80 @@ menu
 )
 ;
 }
+#
+context
+-
+media
+-
+play
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+moz
+-
+icon
+:
+/
+/
+stock
+/
+gtk
+-
+media
+-
+play
+?
+size
+=
+menu
+"
+)
+;
+}
+#
+context
+-
+media
+-
+pause
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+moz
+-
+icon
+:
+/
+/
+stock
+/
+gtk
+-
+media
+-
+pause
+?
+size
+=
+menu
+"
+)
+;
+}
 menuitem
 [
 command
@@ -1993,6 +2067,14 @@ savelink
 context
 -
 saveimage
+#
+context
+-
+savevideo
+#
+context
+-
+saveaudio
 #
 context
 -
@@ -2424,6 +2506,14 @@ copy
 context
 -
 copyimage
+#
+context
+-
+copyvideourl
+#
+context
+-
+copyaudiourl
 #
 context
 -
