Bug 461629 - Need to remove the "private-browsing-enter" observer at the end of test_privbrowsing.html, r=dolske
UltraBlame original commit: 3a3062c6c44830e19493ad336ab6fafde7037da5

--- a/toolkit/components/passwordmgr/test/test_privbrowsing.html
+++ b/toolkit/components/passwordmgr/test/test_privbrowsing.html
@@ -250,6 +250,40 @@ on
 test_notifications
 .
 html
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
+const
+Ci
+=
+Components
+.
+interfaces
+;
+const
+Cc
+=
+Components
+.
+classes
+;
+const
+Cr
+=
+Components
+.
+results
+;
 var
 testpath
 =
@@ -1578,6 +1612,234 @@ testNum
 ;
 }
 }
+/
+/
+This
+observer
+prevents
+a
+prompt
+from
+showing
+up
+asking
+if
+the
+current
+/
+/
+session
+should
+be
+kept
+or
+closed
+upon
+entering
+the
+private
+browsing
+mode
+.
+/
+/
+It
+instructs
+the
+private
+browsing
+service
+to
+keep
+the
+current
+session
+open
+.
+var
+observer
+=
+{
+QueryInterface
+:
+function
+(
+iid
+)
+{
+const
+interfaces
+=
+[
+Ci
+.
+nsIObserver
+Ci
+.
+nsISupports
+]
+;
+if
+(
+!
+interfaces
+.
+some
+(
+function
+(
+v
+)
+iid
+.
+equals
+(
+v
+)
+)
+)
+throw
+Cr
+.
+NS_ERROR_NO_INTERFACE
+;
+return
+this
+;
+}
+observe
+:
+function
+(
+subject
+topic
+data
+)
+{
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
+subject
+.
+QueryInterface
+(
+Ci
+.
+nsISupportsPRUint32
+)
+;
+subject
+.
+data
+=
+0
+;
+}
+register
+:
+function
+(
+)
+{
+var
+os
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+observer
+-
+service
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsIObserverService
+)
+;
+os
+.
+addObserver
+(
+this
+"
+private
+-
+browsing
+-
+enter
+"
+false
+)
+;
+}
+unregister
+:
+function
+(
+)
+{
+var
+os
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+observer
+-
+service
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsIObserverService
+)
+;
+os
+.
+removeObserver
+(
+this
+"
+private
+-
+browsing
+-
+enter
+"
+)
+;
+}
+}
+;
 var
 _PBSvc
 =
@@ -1612,9 +1874,7 @@ try
 {
 _PBSvc
 =
-Components
-.
-classes
+Cc
 [
 "
 mozilla
@@ -1629,9 +1889,7 @@ privatebrowsing
 .
 getService
 (
-Components
-.
-interfaces
+Ci
 .
 nsIPrivateBrowsingService
 )
@@ -1641,147 +1899,10 @@ if
 _PBSvc
 )
 {
-var
 observer
-=
-{
-QueryInterface
-:
-function
+.
+register
 (
-iid
-)
-{
-const
-interfaces
-=
-[
-Components
-.
-interfaces
-.
-nsIObserver
-Components
-.
-interfaces
-.
-nsISupports
-]
-;
-if
-(
-!
-interfaces
-.
-some
-(
-function
-(
-v
-)
-iid
-.
-equals
-(
-v
-)
-)
-)
-throw
-Components
-.
-results
-.
-NS_ERROR_NO_INTERFACE
-;
-return
-this
-;
-}
-observe
-:
-function
-(
-subject
-topic
-data
-)
-{
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
-subject
-.
-QueryInterface
-(
-Components
-.
-interfaces
-.
-nsISupportsPRUint32
-)
-;
-subject
-.
-data
-=
-0
-;
-}
-}
-;
-var
-os
-=
-Components
-.
-classes
-[
-"
-mozilla
-.
-org
-/
-observer
--
-service
-;
-1
-"
-]
-.
-getService
-(
-Components
-.
-interfaces
-.
-nsIObserverService
-)
-;
-os
-.
-addObserver
-(
-observer
-"
-private
--
-browsing
--
-enter
-"
-false
 )
 ;
 }
@@ -1968,6 +2089,12 @@ finished
 "
 )
 ;
+observer
+.
+unregister
+(
+)
+;
 SimpleTest
 .
 finish
@@ -2031,20 +2158,6 @@ enablePrivilege
 UniversalXPConnect
 '
 )
-;
-const
-Ci
-=
-Components
-.
-interfaces
-;
-const
-Cc
-=
-Components
-.
-classes
 ;
 ok
 (
