Bug 400398 - Remove the throbber from the menu bar / nav toolbar default set. ui-r=faaborg, r=mano
UltraBlame original commit: ab03149a5b63f58237229cb54ff5f0693b59214c

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -9491,51 +9491,20 @@ navigator
 -
 throbber
 {
--
-moz
--
-appearance
+width
 :
-none
+16px
 ;
+min
 -
-moz
--
-user
--
-focus
+height
 :
-ignore
+16px
 ;
 margin
 :
 0
-!
-important
-;
-border
-:
-none
-!
-important
-;
-padding
-:
-0px
-!
-important
-;
-min
--
-width
-:
-0
-;
-background
--
-color
-:
-transparent
+3px
 ;
 list
 -
@@ -9563,148 +9532,6 @@ png
 )
 ;
 }
-#
-navigator
--
-throbber
-[
-busy
-=
-"
-true
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-loading_16
-.
-png
-"
-)
-;
-}
-#
-navigator
--
-throbber
->
-hbox
-{
-border
--
-top
-:
-0px
-;
-border
--
-bottom
-:
-0px
-;
-padding
--
-bottom
-:
-1px
-;
-}
-toolbar
-[
-mode
-=
-"
-text
-"
-]
-#
-navigator
--
-throbber
-toolbar
-[
-iconsize
-=
-"
-small
-"
-]
-#
-navigator
--
-throbber
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-notloading_16
-.
-png
-"
-)
-;
-}
-toolbar
-[
-mode
-=
-"
-text
-"
-]
-#
-navigator
--
-throbber
-[
-busy
-=
-"
-true
-"
-]
-toolbar
-[
-iconsize
-=
-"
-small
-"
-]
 #
 navigator
 -
