--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -11978,51 +11978,20 @@ navigator
 -
 throbber
 {
--
-moz
--
-appearance
+width
 :
-none
-;
--
-moz
--
-user
--
-focus
-:
-ignore
-;
-margin
-:
-0
-!
-important
-;
-border
-:
-none
-!
-important
-;
-padding
-:
-0px
-!
-important
+16px
 ;
 min
 -
-width
+height
+:
+16px
+;
+margin
 :
 0
-;
-background
--
-color
-:
-transparent
+3px
 ;
 list
 -
@@ -12050,174 +12019,6 @@ png
 )
 ;
 }
-#
-navigator
--
-throbber
-[
-busy
-=
-"
-true
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-loading_16
-.
-png
-"
-)
-;
-}
-/
-*
-the
-default
-settings
-for
-the
-throbber
-hbox
-is
-too
-tall
-for
-vista
-menus
-*
-/
-#
-navigator
--
-throbber
->
-hbox
-{
-border
--
-top
-:
-0px
-;
-border
--
-bottom
-:
-0px
-;
-padding
--
-bottom
-:
-1px
-;
--
-moz
--
-margin
--
-end
-:
-1px
-;
-}
-toolbar
-[
-iconsize
-=
-"
-small
-"
-]
-#
-navigator
--
-throbber
-toolbar
-[
-mode
-=
-"
-text
-"
-]
-#
-navigator
--
-throbber
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-notloading_16
-.
-png
-"
-)
-;
-}
-toolbar
-[
-iconsize
-=
-"
-small
-"
-]
-#
-navigator
--
-throbber
-[
-busy
-=
-"
-true
-"
-]
-toolbar
-[
-mode
-=
-"
-text
-"
-]
 #
 navigator
 -
