Bug 247161 scrollbar arrows rendered incorrectly with <meta http-equiv="MSThemeCompatible" content="no"/> r=enndeakin, sr=neil
UltraBlame original commit: bab24f0cf6ad2eb9f9f81fa9bb696f9c0d2140c8

--- a/toolkit/themes/winstripe/global/xulscrollbars.css
+++ b/toolkit/themes/winstripe/global/xulscrollbars.css
@@ -868,8 +868,10 @@ Dialog
 no
 -
 repeat
-0px
-1px
+50
+%
+50
+%
 ;
 min
 -
@@ -962,8 +964,10 @@ background
 -
 position
 :
-1px
-2px
+60
+%
+60
+%
 ;
 }
 /
@@ -1917,8 +1921,10 @@ Dialog
 no
 -
 repeat
-0px
-1px
+50
+%
+50
+%
 ;
 min
 -
@@ -2017,8 +2023,10 @@ background
 -
 position
 :
-1px
-2px
+60
+%
+60
+%
 ;
 }
 /
