--- a/browser/themes/winstripe/browser/aboutCertError.css
+++ b/browser/themes/winstripe/browser/aboutCertError.css
@@ -1,4 +1,5 @@
-#
+/
+*
 *
 *
 *
@@ -12,7 +13,7 @@ BLOCK
 *
 *
 *
-#
+*
 Version
 :
 MPL
@@ -29,8 +30,8 @@ LGPL
 2
 .
 1
-#
-#
+*
+*
 The
 contents
 of
@@ -44,7 +45,7 @@ Mozilla
 Public
 License
 Version
-#
+*
 1
 .
 1
@@ -65,7 +66,7 @@ except
 in
 compliance
 with
-#
+*
 the
 License
 .
@@ -78,7 +79,7 @@ of
 the
 License
 at
-#
+*
 http
 :
 /
@@ -91,8 +92,8 @@ org
 /
 MPL
 /
-#
-#
+*
+*
 Software
 distributed
 under
@@ -107,7 +108,7 @@ AS
 IS
 "
 basis
-#
+*
 WITHOUT
 WARRANTY
 OF
@@ -121,7 +122,7 @@ implied
 See
 the
 License
-#
+*
 for
 the
 specific
@@ -132,22 +133,22 @@ and
 limitations
 under
 the
-#
+*
 License
 .
-#
-#
+*
+*
 The
 Original
 Code
 is
-the
-Mozilla
-Browser
+mozilla
+.
+org
 code
 .
-#
-#
+*
+*
 The
 Initial
 Developer
@@ -156,12 +157,11 @@ the
 Original
 Code
 is
-#
-Netscape
-Communications
+*
+Mozilla
 Corporation
 .
-#
+*
 Portions
 created
 by
@@ -173,8 +173,8 @@ Copyright
 (
 C
 )
-2002
-#
+2008
+*
 the
 Initial
 Developer
@@ -183,24 +183,53 @@ All
 Rights
 Reserved
 .
-#
-#
+*
+*
 Contributor
 (
 s
 )
 :
-#
-Brian
-Ryner
+*
+William
+Price
 <
-bryner
-brianryner
+bugzilla
+mob
+.
+rice
+.
+edu
+>
+*
+Steven
+Garrity
+<
+steven
+silverorange
 .
 com
 >
-#
-#
+*
+Henrik
+Skupin
+<
+mozilla
+hskupin
+.
+info
+>
+*
+Johnathan
+Nightingale
+<
+johnath
+mozilla
+.
+com
+>
+*
+*
 Alternatively
 the
 contents
@@ -214,7 +243,7 @@ under
 the
 terms
 of
-#
+*
 either
 the
 GNU
@@ -232,7 +261,7 @@ GPL
 "
 )
 or
-#
+*
 the
 GNU
 Lesser
@@ -251,7 +280,7 @@ the
 LGPL
 "
 )
-#
+*
 in
 which
 case
@@ -266,7 +295,7 @@ LGPL
 are
 applicable
 instead
-#
+*
 of
 those
 above
@@ -284,7 +313,7 @@ of
 this
 file
 only
-#
+*
 under
 the
 terms
@@ -301,7 +330,7 @@ to
 allow
 others
 to
-#
+*
 use
 your
 version
@@ -316,7 +345,7 @@ the
 MPL
 indicate
 your
-#
+*
 decision
 by
 deleting
@@ -329,7 +358,7 @@ them
 with
 the
 notice
-#
+*
 and
 other
 provisions
@@ -346,7 +375,7 @@ you
 do
 not
 delete
-#
+*
 the
 provisions
 above
@@ -360,7 +389,7 @@ of
 this
 file
 under
-#
+*
 the
 terms
 of
@@ -375,8 +404,8 @@ or
 the
 LGPL
 .
-#
-#
+*
+*
 *
 *
 *
@@ -390,121 +419,296 @@ BLOCK
 *
 *
 *
-DEPTH
-=
-.
-.
+*
 /
+html
+{
+background
+:
+-
+moz
+-
+Dialog
+;
+}
+body
+{
+margin
+:
+0
+;
+padding
+:
+0
+1em
+;
+color
+:
+-
+moz
+-
+FieldText
+;
+font
+:
+message
+-
+box
+;
+}
+h1
+{
+margin
+:
+0
+0
 .
-.
-topsrcdir
-=
-top_srcdir
-srcdir
-=
-srcdir
-VPATH
-=
-srcdir
-include
-(
-DEPTH
-)
+6em
+0
+;
+border
+-
+bottom
+:
+1px
+solid
+ThreeDLightShadow
+;
+font
+-
+size
+:
+160
+%
+;
+}
+h2
+{
+font
+-
+size
+:
+130
+%
+;
+}
+#
+errorPageContainer
+{
+position
+:
+relative
+;
+min
+-
+width
+:
+13em
+;
+max
+-
+width
+:
+52em
+;
+margin
+:
+4em
+auto
+;
+border
+:
+1px
+solid
+#
+FFBD09
+;
 /
-config
+*
+pale
+yellow
+extracted
+from
+yellow
+passport
+icon
+*
 /
-autoconf
-.
-mk
-MODULE
-=
-browsercomps
-XPIDL_MODULE
-=
-browsercompsbase
-XPIDLSRCS
-=
-\
-nsIBrowserHandler
-.
-idl
-\
-nsIBrowserGlue
-.
-idl
-\
+-
+moz
+-
+border
+-
+radius
+:
+10px
+;
+padding
+:
+3em
+;
+-
+moz
+-
+padding
+-
+start
+:
+30px
+;
+background
+:
+url
 (
-NULL
-)
-EXTRA_PP_COMPONENTS
-=
-\
-nsBrowserContentHandler
-.
-js
-\
-nsBrowserGlue
-.
-js
-\
-aboutRobots
-.
-js
-\
-(
-NULL
-)
-EXTRA_JS_MODULES
-=
-distribution
-.
-js
-DIRS
-=
-\
-certerror
-\
-dirprovider
-\
-microsummaries
-\
-migration
-\
-preferences
-\
-search
-\
-sessionstore
-\
-shell
-\
-sidebar
-\
-feeds
-\
-places
-\
-(
-NULL
-)
-ifdef
-MOZ_SAFE_BROWSING
-DIRS
-+
-=
-safebrowsing
-endif
-DIRS
-+
-=
-build
-include
-(
-topsrcdir
-)
+"
+chrome
+:
 /
-config
 /
-rules
+global
+/
+skin
+/
+icons
+/
+sslWarning
 .
-mk
+png
+"
+)
+left
+0
+no
+-
+repeat
+-
+moz
+-
+Field
+;
+-
+moz
+-
+background
+-
+origin
+:
+content
+;
+}
+body
+[
+dir
+=
+"
+rtl
+"
+]
+#
+errorPageContainer
+{
+background
+-
+position
+:
+right
+0
+;
+}
+#
+errorTitle
+{
+-
+moz
+-
+margin
+-
+start
+:
+80px
+;
+}
+#
+errorLongContent
+{
+-
+moz
+-
+margin
+-
+start
+:
+80px
+;
+}
+#
+technicalContent
+>
+h2
+#
+expertContent
+>
+h2
+{
+background
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+section_expanded
+.
+png
+"
+)
+left
+0
+no
+-
+repeat
+;
+}
+#
+technicalContent
+[
+collapsed
+]
+>
+h2
+#
+expertContent
+[
+collapsed
+]
+>
+h2
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+section_collapsed
+.
+png
+"
+)
+;
+}
