Bug 459751 - about:sessionrestore switches button placement, r=zeniko
UltraBlame original commit: 3dbb3095c8a901fdcc2e9a5976e5757a2bb75ef0

--- a/browser/components/sessionstore/content/aboutSessionRestore.xhtml
+++ b/browser/components/sessionstore/content/aboutSessionRestore.xhtml
@@ -1131,6 +1131,85 @@ id
 buttons
 "
 >
+#
+ifdef
+XP_UNIX
+<
+button
+id
+=
+"
+errorCancel
+"
+label
+=
+"
+&
+restorepage
+.
+cancelButton
+;
+"
+accesskey
+=
+"
+&
+restorepage
+.
+cancel
+.
+access
+;
+"
+oncommand
+=
+"
+startNewSession
+(
+)
+;
+"
+/
+>
+<
+button
+id
+=
+"
+errorTryAgain
+"
+label
+=
+"
+&
+restorepage
+.
+restoreButton
+;
+"
+accesskey
+=
+"
+&
+restorepage
+.
+restore
+.
+access
+;
+"
+oncommand
+=
+"
+restoreSession
+(
+)
+;
+"
+/
+>
+#
+else
 <
 button
 id
@@ -1205,6 +1284,8 @@ startNewSession
 "
 /
 >
+#
+endif
 <
 /
 hbox
