--- a/browser/themes/gnomestripe/browser/aboutSessionRestore.css
+++ b/browser/themes/gnomestripe/browser/aboutSessionRestore.css
@@ -705,20 +705,27 @@ Highlight
 #
 buttons
 {
-width
-:
-100
-%
-;
 -
 moz
 -
-box
+margin
 -
-direction
+start
 :
-reverse
+80px
 ;
+/
+*
+same
+as
+#
+errorLongContent
+in
+netError
+.
+css
+*
+/
 }
 #
 buttons
