--- a/browser/themes/pinstripe/browser/aboutSessionRestore.css
+++ b/browser/themes/pinstripe/browser/aboutSessionRestore.css
@@ -646,11 +646,27 @@ gif
 #
 buttons
 {
-width
+-
+moz
+-
+margin
+-
+start
 :
-100
-%
+80px
 ;
+/
+*
+same
+as
+#
+errorLongContent
+in
+netError
+.
+css
+*
+/
 }
 #
 buttons
@@ -662,5 +678,14 @@ margin
 top
 :
 2em
+;
+-
+moz
+-
+margin
+-
+start
+:
+6px
 ;
 }
