Bug 459950 - Polish about:sessionrestore; r=l10n, ui-r=faaborg
UltraBlame original commit: 0e702acc89d97b11a3d7a7f199f7aa77515cc2f6

--- a/browser/components/sessionstore/content/aboutSessionRestore.xhtml
+++ b/browser/components/sessionstore/content/aboutSessionRestore.xhtml
@@ -552,7 +552,7 @@ title
 &
 restorepage
 .
-title
+tabtitle
 ;
 <
 /
@@ -758,7 +758,7 @@ errorTitleText
 &
 restorepage
 .
-titletext
+pagetitle
 ;
 <
 /
@@ -822,7 +822,7 @@ errorShortDescText
 &
 restorepage
 .
-shortDesc
+issueDesc
 ;
 <
 /
