Bug 411261 - Bookmark properties dialog needs tagging UI, r=dietrich, ui-r:changes required by Faaborg in bug 459958
UltraBlame original commit: 6fd85628b1dc1f1c4a7c95fc522d21f90861a426

--- a/browser/themes/gnomestripe/browser/places/editBookmarkOverlay.css
+++ b/browser/themes/gnomestripe/browser/places/editBookmarkOverlay.css
@@ -520,6 +520,20 @@ width
 :
 0
 ;
+padding
+:
+2px
+0
+;
+-
+moz
+-
+padding
+-
+start
+:
+2px
+;
 }
 .
 expander
@@ -663,6 +677,30 @@ hov
 gif
 "
 )
+;
+}
+#
+editBMPanel_tagsSelector
+[
+collapsed
+=
+"
+true
+"
+]
+#
+editBMPanel_folderTree
+[
+collapsed
+=
+"
+true
+"
+]
+{
+display
+:
+none
 ;
 }
 /
@@ -912,5 +950,134 @@ menupopup
 display
 :
 none
+;
+}
+/
+*
+Bookmark
+panel
+dropdown
+menu
+items
+*
+/
+#
+editBMPanel_folderMenuList
+[
+selectedIndex
+=
+"
+0
+"
+]
+#
+editBMPanel_toolbarFolderItem
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+places
+/
+bookmarksToolbar
+.
+png
+"
+)
+!
+important
+;
+}
+#
+editBMPanel_folderMenuList
+[
+selectedIndex
+=
+"
+1
+"
+]
+#
+editBMPanel_bmRootItem
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+places
+/
+bookmarksMenu
+.
+png
+"
+)
+!
+important
+;
+}
+#
+editBMPanel_folderMenuList
+[
+selectedIndex
+=
+"
+2
+"
+]
+#
+editBMPanel_unfiledRootItem
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+places
+/
+unsortedBookmarks
+.
+png
+"
+)
+!
+important
 ;
 }
