--- a/browser/themes/pinstripe/browser/places/editBookmarkOverlay.css
+++ b/browser/themes/pinstripe/browser/places/editBookmarkOverlay.css
@@ -1249,3 +1249,142 @@ display
 none
 ;
 }
+/
+*
+-
+-
+-
+-
+-
+BOOKMARK
+PANEL
+DROPDOWN
+MENU
+ITEMS
+-
+-
+-
+-
+-
+*
+/
+#
+editBMPanel_folderMenuList
+[
+selectedIndex
+=
+"
+0
+"
+]
+#
+editBMPanel_toolbarFolderItem
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+places
+/
+bookmarksToolbar
+.
+png
+"
+)
+!
+important
+;
+}
+#
+editBMPanel_folderMenuList
+[
+selectedIndex
+=
+"
+1
+"
+]
+#
+editBMPanel_bmRootItem
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+places
+/
+bookmarksMenu
+.
+png
+"
+)
+!
+important
+;
+}
+#
+editBMPanel_folderMenuList
+[
+selectedIndex
+=
+"
+2
+"
+]
+#
+editBMPanel_unfiledRootItem
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+places
+/
+unfiledBookmarks
+.
+png
+"
+)
+!
+important
+;
+}
