--- a/browser/themes/winstripe/browser/places/editBookmarkOverlay.css
+++ b/browser/themes/winstripe/browser/places/editBookmarkOverlay.css
@@ -532,6 +532,10 @@ width
 :
 0
 ;
+margin
+:
+0
+;
 }
 .
 expander
@@ -611,6 +615,30 @@ expand
 png
 "
 )
+;
+}
+#
+editBMPanel_tagsSelector
+[
+collapsed
+=
+"
+true
+"
+]
+#
+editBMPanel_folderTree
+[
+collapsed
+=
+"
+true
+"
+]
+{
+display
+:
+none
 ;
 }
 /
@@ -860,5 +888,176 @@ menupopup
 display
 :
 none
+;
+}
+/
+*
+:
+:
+:
+:
+:
+bookmark
+panel
+dropdown
+icons
+:
+:
+:
+:
+:
+*
+/
+#
+editBMPanel_folderMenuList
+[
+selectedIndex
+=
+"
+0
+"
+]
+#
+editBMPanel_toolbarFolderItem
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+places
+/
+bookmarksToolbar
+.
+png
+"
+)
+!
+important
+;
+-
+moz
+-
+image
+-
+region
+:
+auto
+!
+important
+;
+}
+#
+editBMPanel_folderMenuList
+[
+selectedIndex
+=
+"
+1
+"
+]
+#
+editBMPanel_bmRootItem
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+places
+/
+bookmarksMenu
+.
+png
+"
+)
+!
+important
+;
+-
+moz
+-
+image
+-
+region
+:
+auto
+!
+important
+;
+}
+#
+editBMPanel_folderMenuList
+[
+selectedIndex
+=
+"
+2
+"
+]
+#
+editBMPanel_unfiledRootItem
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+places
+/
+unsortedBookmarks
+.
+png
+"
+)
+!
+important
+;
+-
+moz
+-
+image
+-
+region
+:
+auto
+!
+important
 ;
 }
